--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,10 +1,22 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h1>It's a <%= kindOfDay %>!</h1>
-  </body>
-</html>
+<%- include('header') -%>
+  <div class="box" id="heading">
+    <h1> <%= kindOfDay %></h1>
+  </div>
+
+
+  <div class="box">
+    <%for(var i=0; i<newItem.length; i++){%>
+    <div class="item">
+      <input type="checkbox">
+      <p> <%= newItem[i] %> </p>
+    </div>
+    <%}%>
+
+    <form class="item" action="/" method="post">
+      <!-- <label for="">Enter new list item</label> -->
+      <input type="text" name="listItem" placeholder="New item" autocomplete="off">
+      <button type="submit" name="list" value= <%= kindOfDay %> >+</button>
+    </form>
+
+  </div>
+<%- include('footer') -%>
